Revision history for {{ $dist-name }}

{{$NEXT}}

0.007     2013-12-22 00:44:49Z
    - add missing authority data to module and metadata

0.006     2013-06-21 22:01:15Z
    - re-release with my plugin bundle, fixing associated metadata.

0.005     2013-06-21 20:11:26Z
    - split apart MooseX::Types::Path::Tiny and Types::Path::Tiny into their
      own distributions. This dist has reverted back to
      MooseX-Types-Path-Tiny as of version 0.002, and to using MooseX::Types
      -- the Type::Tiny version is available in the separate Types-Path-Tiny
      distribution.
    - Perl prereq remains at v5.8.1

0.004     2013-06-21 13:05:55 America/New_York

    - Bumped Type::Tiny prereq to avoid known bugs in it

0.003     2013-06-20 16:01:13 America/New_York

    - Converted to Type::Tiny; works with Moose or Moo now

    - Dropped Perl prereq to v5.8.1

0.002     2013-02-12 09:35:41 America/New_York

    - Bump Moose version prereq to 2, just in case anyone out there still
      has version 1 installed.

0.001     2013-01-31 10:45:24 America/New_York

    - First release
